# mofa-studio

./: .gitignore  CHECKLIST.md  Cargo.toml  MOFA_DORA_ARCHITECTURE.md  README.md  lbc-setup.md  mofa-studio-dora-integration-checklist.md  run-mofa-studio.sh
apps/mofa-cast/: IMPROVEMENTS.md  README.md  v0.6.0_RELEASE_NOTES.md  v0.6.0_TESTING_GUIDE.md
apps/mofa-cast/dataflow/: README.md
apps/mofa-cast/docs/: APP_DEVELOPMENT_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_cn.md  CHECKLIST.md  DROPDOWN_STATE_MANAGEMENT.md  FILE_DIALOG_GUIDE.md  FILE_DIALOG_TROUBLESHOOTING.md  KNOWN_ISSUES.md  KOKORO_TTS_GUIDE_DEPRECATED.md  MP3_EXPORT_RESEARCH.md  NEXT_STEPS.md  NEXT_STeps_v0.6.0.md  TEST_REPORT_TEMPLATE.md  TTS_INTEGRATION.md  TTS_TROUBLESHOOTING.md  TTS_WORKFLOW_TEST.md  UI_LAYOUT.md  roadmap-claude.md
apps/mofa-cast/src/: dora_integration.rs  screen.rs
apps/mofa-cast/test_samples/: sample_json.json  sample_markdown.md  sample_plain.txt
apps/mofa-debate/: Cargo.toml
apps/mofa-debate/src/: lib.rs
models/model-manager/: README.md
models/setup-lcoal-models/: DEPENDENCIES.md  README.md  install_all_packages.sh  setup_isolated_env.sh
models/setup-local-models/: install_all_packages.sh  setup_isolated_env.sh
mofa-dora-bridge/: Cargo.toml
mofa-dora-bridge/src/: bridge.rs  controller.rs  data.rs  dispatcher.rs  lib.rs
mofa-studio-shell/: Cargo.toml
mofa-studio-shell/src/: app.rs
mofa-studio-shell/src/widgets/: dashboard.rs  sidebar.rs  tabs.rs
mofa-ui/: Cargo.toml
mofa-ui/src/: audio.rs  lib.rs  log_bridge.rs
mofa-widgets/src/: app_trait.rs  lib.rs
(+41 files in other folders)
